--- a/SphericalvsCartesian.ipynb
+++ b/SphericalvsCartesian.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "#### $\\frac{\\partial X}{\\partial t} = D\\nabla^{2}X$\n",
     "\n",
-    "where T is some scalar field and D is the diffusion constant.\n",
+    "where X is some scalar field and D is the diffusion constant.\n",
     "\n",
     "The solution is unconditionally stable and the code ensure that it is accurate based on a Von-Neumann stability analysis: $\\frac{\\kappa dt}{2dr^{2}}<0.5$ (running multiple iterations at smaller dt if necessary)\n",
     "\n",
